# ElMaestro

./: .gitignore  Cargo.toml  README.md  compare.html  elmaestro.spec  pyproject.toml
.claude/: settings.json
.github/workflows/: release.yml
docs/: BINARY_SIZE.md  PLAN.md
examples/: fio_single.yaml  multi_client.yaml  s3_minio.yaml  single_test.yaml  sweep_block_sizes.yaml
python-legacy/: elmaestro.spec
python-legacy/src/elbencho_harness/backends/: __init__.py  base.py
python-legacy/src/elbencho_harness/config/: models.py
python-legacy/src/elbencho_harness/report/: charts.py  compare.py
python-legacy/src/elbencho_harness/results/: schema.py
python-legacy/src/elbencho_harness/tui/: __init__.py
python-legacy/tests/fixtures/: fake_elbencho.sh  fio_smoke.yaml  smoke.yaml
python-legacy/tests/unit/: test_charts.py  test_fio_backend.py  test_loader_expand.py  test_models.py  test_parse_phases.py  test_s3.py  test_service.py  test_ssh.py  test_sweep.py
scripts/: build-binary.sh
src/: cli.rs  lib.rs  main.rs
src/backends/: elbencho.rs  fio.rs  mod.rs
src/config/: host_expand.rs  loader.rs  mod.rs  models.rs  sweep.rs
src/elbencho_harness/: __main__.py  cli.py
src/elbencho_harness/backends/: elbencho.py  fio.py
src/elbencho_harness/config/: loader.py  models.py  sweep.py
src/elbencho_harness/engine/: coordinator.py  elbencho.py  service.py  ssh.py
src/elbencho_harness/report/: charts.py  compare.py  render.py
src/elbencho_harness/report/templates/: compare.html.j2  report.html.j2
src/elbencho_harness/results/: parse.py  schema.py  store.py
src/elbencho_harness/tui/: __init__.py  app.py  runner.py  screens.py
src/engine/: check.rs  coordinator.rs  mod.rs  service.rs  ssh.rs  sysinfo.rs
src/report/: charts.rs  compare.rs  mod.rs  render.rs
src/results/: mod.rs  schema.rs
src/tui/: app.rs  configure.rs  mod.rs  runner.rs  screens.rs
templates/: compare.html  single.html
tests/fixtures/: fake_fio.sh  smoke.yaml  sweep_smoke.yaml
tests/unit/: test_backend_registry.py  test_charts.py  test_compare.py  test_coordinator.py  test_elbencho.py  test_fio_backend.py  test_parse_phases.py  test_service.py  test_ssh.py  test_tui.py
