[package]
name = "elmaestro"
version = "1.8.0"
edition = "2021"
rust-version = "1.75"
description = "Interactive IO benchmarking harness on elbencho + fio"
authors = ["Josh Hampton <josh.h@weka.io>"]
license = "MIT"
repository = "https://github.com/WekaJosh/ElMaestro"
readme = "README.md"

[[bin]]
name = "elmaestro"
path = "src/main.rs"

# Serialization / parsing -----------------------------------------------------
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
csv = "1"

# CLI -------------------------------------------------------------------------
clap = { version = "4", features = ["derive", "env"] }

# Async + subprocess ----------------------------------------------------------
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "net", "fs", "time", "sync"] }

# TUI -------------------------------------------------------------------------
ratatui = "0.29"
crossterm = "0.28"

# Templates (HTML reports) ----------------------------------------------------
askama = "0.12"

# Misc ------------------------------------------------------------------------
ulid = "1"
anyhow = "1"
thiserror = "2"
once_cell = "1"
shellexpand = "3"
chrono = { version = "0.4", features = ["serde"] }
shlex = "1"
indexmap = { version = "2", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sha2 = "0.10"
hex = "0.4"
regex = "1"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"

# Release profile: optimize for size + speed of a CLI/TUI tool.
[profile.release]
opt-level = "z"      # optimize for size
lto = true           # link-time optimization
codegen-units = 1    # better optimization, slower builds (we don't care)
strip = true         # strip symbol tables
panic = "abort"      # smaller binary; we don't need unwinding
